# newsletter

./: Cargo.toml  Dockerfile  README
.github/workflows/: build_and_push_acr.yml  general.yml
.sqlx/: query-00dd4f566fe98659a159f2de28f6e3e012c1937b1ae43855d4eeac532226db40.json  query-26b230c7c598eb4538cc574903dd237adfeec6e4170ceb65916298ea73acf854.json  query-42d35bec8ba43606dc52f364a498020207e255857028dcb5d488a383d1c2cc51.json  query-5d70be4ed37fe63038f48f081035ac54cfed155afe300b176e02fab0ec595415.json  query-aa0445c107513863945f43341831ed03e685a19e5e1f2db7b8f9dee37643bd80.json  query-c84d9f6e8cbd2535ce8e6ec39582f6bac199559bebfb91c26dbdd6876c8d633f.json  query-e6613363429e10b2a2036e74d23ff6580edfe5f06ac26a3218dddf636502f004.json
configuration/: base.yaml  production.yml
migrations/: 20250909145436_create_subscriptions_table.sql  20251010125446_make_status_not_null_in_subscriptions.sql  20251105104948_seed_user_fix.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  idempotency_cleaner_worker.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
