[package]
name = "newsletter"
version = "0.1.0"
edition = "2024"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature- we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.15"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"
unicode-segmentation = "1"
claim = "0.5"
validator = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1"
fake = "4"
quickcheck = "1"
quickcheck_macros = "1"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"